[tool.poetry]
name = "python-web-task-5"
version = "0.1.0"
description = ""
authors = ["Evhenii"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.5"
aiofile = "^3.8.1"
aiopath = "^0.1.0"
websockets = "^11.0


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
